--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Consultorio Jurídico IUSBELLI</title>
+  <title>IUS BELLI CONSULTORIO JURIDICO</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -66,17 +66,17 @@
 
   <main>
     <section>
-      <h2>Bienvenidos</h2>
+      <h2>CEO:AB CRISTOPHER MEDRANDA. MGTR.</h2>
       <p>En IUSBELLI brindamos asesoría legal accesible y confiable en áreas de derecho civil, penal, y familiar. Nuestro equipo de abogados está comprometido con la defensa de tus derechos.</p>
     </section>
 
     <section>
-      <h2>Servicios</h2>
+      <h2>Nuestros Servicios</h2>
       <ul>
-        <li>Asesoría legal especializada</li>
-        <li>Redacción de documentos legales</li>
+        <li>Asesoría legal especializada virtual y presencial</li>
+        <li>Redacción de escritos y documentos legales</li>
         <li>Defensa en procesos judiciales</li>
-        <li>Gestiones Notariales, escritas</li>
+        <li>Tramites Notariales</li>
         <li>Mediación y conciliación</li>
       </ul>
     </section>
@@ -107,7 +107,7 @@
   </a>
 
   <footer>
-    <p>&copy; 2025 Consultorio Jurídico LegalPlus - Todos los derechos reservados</p>
+    <p>&copy; 2025 Consultorio Jurídico IUS-BELLI - Todos los derechos reservados</p>
   </footer>
 
 </body>
