--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
   <footer>
     <p>&copy; 2025 Consultorio Jurídico IUS-BELLI - Todos los derechos reservados</p>
   </footer>
-
+<p>
+  <a href="https://www.google.com/maps?q=Av.+Siempre+Viva+123,+Quito,+Ecuador" target="_blank">
+    Ver en Google Maps
+  </a>
+</p>
 </body>
 </html>
