--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <p>&copy; 2025 Consultorio Jurídico IUS-BELLI - Todos los derechos reservados</p>
   </footer>
 <p>
-  <a href="https://www.google.com/maps?q=Av.+Siempre+Viva+123,+Quito,+Ecuador" target="_blank">
+  <a href="https://www.google.com.ar/maps/place/IUS+BELLI+Consultorio+Juridico/@-0.0044555,-78.4541135,17z/data=!3m1!4b1!4m6!3m5!1s0x91d5890059e3eda9:0xa45d17af017ff35d!8m2!3d-0.0044555!4d-78.4492426!16s%2Fg%2F11w7dg40zd?entry=ttu&g_ep=EgoyMDI1MDUyNi4wIKXMDSoASAFQAw%3D%3D"target="_blank">
     Ver en Google Maps
   </a>
 </p>
