--- a/index.html
+++ b/index.html
@@ -114,5 +114,14 @@
     Ver en Google Maps
   </a>
 </p>
+  <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.81830827973!2d-78.45411351509101!3d-0.00445549998389046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d5890059e3eda9%3A0xa45d17af017ff35d!2sIUS%20BELLI%20Consultorio%20Juridico!5e0!3m2!1ses-419!2sec!4v1748363897626!5m2!1ses-419!2sec" 
+  width="600" 
+  height="450" 
+  style="border:0;" 
+  allowfullscreen="" 
+  loading="lazy" 
+  referrerpolicy="no-referrer-when-downgrade"> 
+  </iframe>
 </body>
 </html>
