--- a/index.html
+++ b/index.html
@@ -63,7 +63,52 @@
     <a href="#">Nuestro Equipo</a>
     <a href="#">Contacto</a>
   </nav>
+<section class="director">
+  <img src="img/director.jpg" alt="Foto del Director" class="foto-director">
+  <div class="descripcion-director">
+    <h2>Abg. Cristopher Gabriel Medranda Valencia</h2>
+    <p>
+      Director de la firma. Máster en Derecho Procesal y Litigación Oral. Con más de 10 años de experiencia liderando procesos judiciales con enfoque ético y técnico, garantiza el compromiso y la excelencia profesional en cada caso.
+    </p>
+  </div>
+</section>
 
+<style>
+.director {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  padding: 40px;
+  background-color: #f9f9f9;
+  border-radius: 20px;
+  margin: 40px auto;
+  max-width: 1000px;
+}
+
+.foto-director {
+  width: 250px;
+  border-radius: 15px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+}
+
+.descripcion-director {
+  max-width: 600px;
+}
+
+.descripcion-director h2 {
+  font-size: 26px;
+  margin-bottom: 15px;
+  color: #222;
+}
+
+.descripcion-director p {
+  font-size: 18px;
+  line-height: 1.6;
+  color: #444;
+}
+</style>
   <main>
     <section>
       <h2>CEO:AB CRISTOPHER MEDRANDA. MGTR.</h2>
