--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 <section class="director">
   <img src="img/director.jpg" alt="Foto del Director" class="foto-director">
   <div class="descripcion-director">
-    <h2>Abg. Cristopher Gabriel Medranda Valencia</h2>
+    <h2>Abg. Cristopher Gabriel Medranda Valencia. Mgtr.</h2>
     <p>
-      Director de la firma. Máster en Derecho Procesal y Litigación Oral. Con más de 10 años de experiencia liderando procesos judiciales con enfoque ético y técnico, garantiza el compromiso y la excelencia profesional en cada caso.
+      Director Fundador de la firma IUS BELLI. Máster en Derecho Procesal y Litigación Oral. Con amplia experiencia liderando procesos judiciales con enfoque ético y técnico, garantiza el compromiso y la excelencia profesional en cada caso.
     </p>
   </div>
 </section>
@@ -111,8 +111,8 @@
 </style>
   <main>
     <section>
-      <h2>CEO:AB CRISTOPHER MEDRANDA. MGTR.</h2>
-      <p>En IUSBELLI brindamos asesoría legal accesible y confiable en áreas de derecho civil, penal, y familiar. Nuestro equipo de abogados está comprometido con la defensa de tus derechos.</p>
+      <h2>CONSULTORIO JURIDICO IUS BELLI</h2>
+      <p>En IUSBELLI brindamos asesoría legal accesible y confiable en áreas de derecho Civil, Penal, y Familiar, nuestra excelencia y ficacia está comprometido con la defensa de tus derechos.</p>
     </section>
 
     <section>
