--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <main>
     <section>
       <h2>CONSULTORIO JURIDICO IUS BELLI</h2>
-      <p>En IUSBELLI brindamos asesoría legal accesible y confiable en áreas de derecho Civil, Penal, y Familiar, nuestra excelencia y ficacia está comprometido con la defensa de tus derechos.</p>
+      <p>En IUSBELLI brindamos asesoría legal accesible y confiable en áreas de derecho Civil, Penal, y Familiar, nuestra excelencia y eficacia está comprometido con la defensa de tus derechos, garantizando la defensa tecnica con profesionalismo.</p>
     </section>
 
     <section>
