--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a href="#">Contacto</a>
   </nav>
 <section class="director">
-  <img src="img/director.jpg" alt="Foto del Director" class="foto-director">
+  <img src="img/70BF5907-CE4E-4D82-96EE-74C882B52955_1_105_c.jpeg" alt="Foto del Director">
   <div class="descripcion-director">
     <h2>Abg. Cristopher Gabriel Medranda Valencia. Mgtr.</h2>
     <p>
