--- a/index.html
+++ b/index.html
@@ -79,18 +79,20 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 30px;
   padding: 30px;
   background-color: #f9f9f9;
-  border-radius: 10px;
-  margin: 25px auto;
-  max-width: 600px;
+  border-radius: 0.8px;
+  margin: 30px auto;
+  max-width: 700px;
 }
 
-.foto-director {
-  width: 100px;
-  border-radius: 8px;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+<style>
+.foto-pequena {
+  width: 120px;
+  border-radius: 10px;
+}
+</style>
 }
 
 .descripcion-director {
