--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@
 
 <style>
 .foto-pequena {
-  width: 120px;
-  border-radius: 10px;
+  width: 120px;         
+  border-radius: 10px;     
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2); 
+}
+</style>
 }
 </style>
 }
