--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a href="#">Contacto</a>
   </nav>
 <section class="director">
-  <img src="img/70BF5907-CE4E-4D82-96EE-74C882B52955_1_105_c.jpeg" alt="Foto del Director">
+  <img src="img/70BF5907-CE4E-4D82-96EE-74C882B52955_1_105_c.jpeg" alt="Foto del Director" class="foto-pequena">
   <div class="descripcion-director">
     <h2>Abg. Cristopher Gabriel Medranda Valencia. Mgtr.</h2>
     <p>
@@ -82,18 +82,31 @@
   gap: 30px;
   padding: 30px;
   background-color: #f9f9f9;
-  border-radius: 0.8px;
+  border-radius: 10px;
   margin: 30px auto;
   max-width: 700px;
 }
 
-<style>
 .foto-pequena {
-  width: 120px;         
-  border-radius: 10px;     
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2); 
+  width: 120px;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
-</style>
+
+.descripcion-director {
+  max-width: 1000px;
+}
+
+.descripcion-director h2 {
+  font-size: 26px;
+  margin-bottom: 15px;
+  color: #222;
+}
+
+.descripcion-director p {
+  font-size: 18px;
+  line-height: 1.6;
+  color: #444;
 }
 </style>
 }
