--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
 </section>
 
-<style>
+</style>
 .director {
   display: flex;
   flex-wrap: wrap;
@@ -130,9 +130,11 @@
   <main>
     <section>
       <h2>CONSULTORIO JURIDICO IUS BELLI</h2>
-      <p>En IUSBELLI brindamos asesoría legal accesible y confiable en áreas de derecho Civil, Penal, y Familiar, nuestra excelencia y eficacia está comprometido con la defensa de tus derechos, garantizando la defensa tecnica con profesionalismo.</p>
-    </section>
-
+    <p>
+  En IUSBELLI brindamos asesoría legal accesible y confiable en las áreas de Derecho Civil, Penal y de Familia. Nuestra excelencia y eficacia están comprometidas con la defensa de tus derechos, garantizando una representación técnica con profesionalismo.
+    </p>
+    <section>
+      
     <section>
       <h2>Nuestros Servicios</h2>
       <ul>
