--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IUS BELLI CONSULTORIO JURIDICO</title>
+  <title>IUS BELLI CONSULTORIO JURÍDICO</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -48,13 +48,48 @@
       bottom: 0;
       width: 100%;
     }
+    .director {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 30px;
+      padding: 30px;
+      background-color: #f9f9f9;
+      border-radius: 10px;
+      margin: 30px auto;
+      max-width: 700px;
+    }
+    .foto-pequena {
+      width: 120px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    }
+    .descripcion-director {
+      max-width: 1000px;
+    }
+    .descripcion-director h2 {
+      font-size: 26px;
+      margin-bottom: 15px;
+      color: #222;
+    }
+    .descripcion-director p {
+      font-size: 18px;
+      line-height: 1.6;
+      color: #444;
+    }
+    .mapa-responsive {
+      width: 100%;
+      height: 400px;
+      border: 0;
+    }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Consultorio Jurídico IUSBELLI</h1>
-    <p>¡nuestra prioridad, eres tú!</p>
+    <h1>Consultorio Jurídico IUS BELLI</h1>
+    <p>¡Nuestra prioridad eres tú!</p>
   </header>
 
   <nav>
@@ -63,94 +98,43 @@
     <a href="#">Nuestro Equipo</a>
     <a href="#">Contacto</a>
   </nav>
-<section class="director">
-  <img src="img/70BF5907-CE4E-4D82-96EE-74C882B52955_1_105_c.jpeg" alt="Foto del Director" class="foto-pequena">
-  <div class="descripcion-director">
-    <h2>Abg. Cristopher Gabriel Medranda Valencia. Mgtr.</h2>
-    <p>
-      Director Fundador de la firma IUS BELLI. Máster en Derecho Procesal y Litigación Oral. Con amplia experiencia liderando procesos judiciales con enfoque ético y técnico, garantiza el compromiso y la excelencia profesional en cada caso.
-    </p>
-  </div>
-</section>
 
-</style>
-.director {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-  padding: 30px;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  margin: 30px auto;
-  max-width: 700px;
-}
+  <section class="director">
+    <img src="img/70BF5907-CE4E-4D82-96EE-74C882B52955_1_105_c.jpeg" alt="Cristopher Gabriel Medranda Valencia, Director de IUS BELLI" class="foto-pequena">
+    <div class="descripcion-director">
+      <h2>Abg. Cristopher Gabriel Medranda Valencia. Mgtr.</h2>
+      <p>
+        Director Fundador de la firma IUS BELLI. Máster en Derecho Procesal y Litigación Oral. Con amplia experiencia liderando procesos judiciales con enfoque ético y técnico, garantiza el compromiso y la excelencia profesional en cada caso.
+      </p>
+    </div>
+  </section>
 
-.foto-pequena {
-  width: 120px;
-  border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-}
-
-.descripcion-director {
-  max-width: 1000px;
-}
-
-.descripcion-director h2 {
-  font-size: 26px;
-  margin-bottom: 15px;
-  color: #222;
-}
-
-.descripcion-director p {
-  font-size: 18px;
-  line-height: 1.6;
-  color: #444;
-}
-</style>
-}
-
-.descripcion-director {
-  max-width: 1000px;
-}
-
-.descripcion-director h2 {
-  font-size: 26px;
-  margin-bottom: 15px;
-  color: #222;
-}
-
-.descripcion-director p {
-  font-size: 18px;
-  line-height: 1.6;
-  color: #444;
-}
-</style>
   <main>
     <section>
-      <h2>CONSULTORIO JURIDICO IUS BELLI</h2>
-    <p>
-  En IUSBELLI brindamos asesoría legal accesible y confiable en las áreas de Derecho Civil, Penal y de Familia. Nuestra excelencia y eficacia están comprometidas con la defensa de tus derechos, garantizando una representación técnica con profesionalismo.
-    </p>
-    <section>
-      
+      <h2>CONSULTORIO JURÍDICO IUS BELLI</h2>
+      <p>
+        En IUS BELLI brindamos asesoría legal accesible y confiable en las áreas de Derecho Civil, Penal y de Familia. Nuestra excelencia y eficacia están comprometidas con la defensa de tus derechos, garantizando una representación técnica con profesionalismo.
+      </p>
+    </section>
+
     <section>
       <h2>Nuestros Servicios</h2>
       <ul>
         <li>Asesoría legal especializada virtual y presencial</li>
         <li>Redacción de escritos y documentos legales</li>
         <li>Defensa en procesos judiciales</li>
-        <li>Tramites Notariales</li>
+        <li>Trámites notariales</li>
         <li>Mediación y conciliación</li>
       </ul>
     </section>
 
     <section>
       <h2>Contáctanos</h2>
-      <p>Teléfono: 0984872801<br>
-         Email: cristophermedranda@hotmail.com<br>
-         Dirección: Ecuador-Norte de Quito, Calle Sheygua N1-217 & Misión Geodesica</p>
+      <p>
+        Teléfono: 0984872801<br>
+        Email: cristophermedranda@hotmail.com<br>
+        Dirección: Ecuador - Norte de Quito, Calle Sheygua N1-217 & Misión Geodésica
+      </p>
     </section>
   </main>
 
@@ -170,22 +154,26 @@
   ">
     Contactar por WhatsApp
   </a>
-<p>
-  <a href="https://www.google.com.ar/maps/place/IUS+BELLI+Consultorio+Juridico/@-0.0044555,-78.4541135,17z/data=!3m1!4b1!4m6!3m5!1s0x91d5890059e3eda9:0xa45d17af017ff35d!8m2!3d-0.0044555!4d-78.4492426!16s%2Fg%2F11w7dg40zd?entry=ttu&g_ep=EgoyMDI1MDUyNi4wIKXMDSoASAFQAw%3D%3D"target="_blank">
-    Ver en Google Maps
-  </a>
-</p>
+
+  <!-- Enlace a Google Maps -->
+  <p style="text-align: center; margin-top: 40px;">
+    <a href="https://www.google.com.ar/maps/place/IUS+BELLI+Consultorio+Juridico/@-0.0044555,-78.4541135,17z/data=!3m1!4b1!4m6!3m5!1s0x91d5890059e3eda9:0xa45d17af017ff35d!8m2!3d-0.0044555!4d-78.4492426!16s%2Fg%2F11w7dg40zd?entry=ttu" target="_blank">
+      Ver en Google Maps
+    </a>
+  </p>
+
+  <!-- Mapa embebido -->
   <iframe 
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.81830827973!2d-78.45411351509101!3d-0.00445549998389046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d5890059e3eda9%3A0xa45d17af017ff35d!2sIUS%20BELLI%20Consultorio%20Juridico!5e0!3m2!1ses-419!2sec!4v1748363897626!5m2!1ses-419!2sec" 
-  width="600" 
-  height="450" 
-  style="border:0;" 
-  allowfullscreen="" 
-  loading="lazy" 
-  referrerpolicy="no-referrer-when-downgrade"> 
+    class="mapa-responsive"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.81830827973!2d-78.45411351509101!3d-0.00445549998389046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d5890059e3eda9%3A0xa45d17af017ff35d!2sIUS%20BELLI%20Consultorio%20Juridico!5e0!3m2!1ses-419!2sec!4v1748363897626!5m2!1ses-419!2sec" 
+    allowfullscreen 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
   </iframe>
-   <footer>
-    <p>&copy; 2025 Consultorio Jurídico IUS-BELLI - Todos los derechos reservados</p>
+
+  <footer>
+    <p>&copy; 2025 Consultorio Jurídico IUS BELLI - Todos los derechos reservados</p>
   </footer>
+
 </body>
 </html>
