--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IUS BELLI CONSULTORIO JURÍDICO</title>
+  <title>IUS BELLLI COONSULTORIO JURIDICO</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -88,8 +88,8 @@
 <body>
 
   <header>
-    <h1>Consultorio Jurídico IUS BELLI</h1>
-    <p>¡Nuestra prioridad eres tú!</p>
+    <h1>IUS BELLI CONSULTORIO JURIDICO</h1>
+    <p>"Un abogado tiene que saber pelear con elegancia, negociar con firmeza y defender con honor"</p>
   </header>
 
   <nav>
@@ -172,7 +172,7 @@
   </iframe>
 
   <footer>
-    <p>&copy; 2025 Consultorio Jurídico IUS BELLI - Todos los derechos reservados</p>
+    <p>&copy; 2023 IUS BELLI CONSULTORIO JURIDICO - Todos los derechos reservados</p>
   </footer>
 
 </body>
