--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IUS BELLLI COONSULTORIO JURIDICO</title>
+  <title>IUS BELLLI CONSULTORIO JURIDICO</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
