--- a/index.html
+++ b/index.html
@@ -127,6 +127,28 @@
         <li>Mediación y conciliación</li>
       </ul>
     </section>
+    <section>
+      <h2>Canal de YouTube</h2>
+      <p>
+        <a href="https://www.youtube.com/@critomedranda3676" target="_blank" style="
+          background-color: #FF0000;
+          color: white;
+          padding: 10px 20px;
+          border-radius: 5px;
+          text-decoration: none;
+          font-weight: bold;
+        ">
+          Visita nuestro canal en YouTube
+        </a>
+      </p>
+      <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/1EqEhFkvuF0"
+        title="Video de presentación"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </section>
 
     <section>
       <h2>Contáctanos</h2>
