--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           text-decoration: none;
           font-weight: bold;
         ">
-          Visita nuestro canal en YouTube
+          Visita nuestro canal en YouTube Programa de Capacitación Continua. 
         </a>
       </p>
       <iframe width="560" height="315"
